# zeroclaw

./: .dockerignore  .env.example  AGENTS.md  Cargo.toml  Dockerfile  PR_DESCRIPTION_UPDATE.md  build.rs  deploy.sh  docker-compose.zero-trust.yml
.beads/: dod_mcp.md  issues.jsonl
.github/workflows/: deploy-vps.yml  pub-docker-img.yml
crates/zeroclaw-tool-call-parser/: Cargo.toml
crates/zeroclaw-tool-call-parser/src/: lib.rs
docs/: SUMMARY.md  ci-map.md  db-migration-plan.md  deployment-flow.md  tools-reference.md
docs/project/: README.md  orchestrator-vs-provider-catalog-plan-2026-02-27.md
src/: main.rs
src/agent/: loop_.rs  mod.rs  provider_resolver.rs
src/agent/a2a/: discovery.rs  mod.rs  server.rs  types.rs
src/auth/: cloudflare_access.rs
src/channels/: loader.rs
src/config/: db.rs  db_wrapper.rs  mod.rs  schema.rs
src/doctor/: mod.rs
src/gateway/: api.rs  api_db.rs  mod.rs  sse.rs  ws.rs
src/integrations/: registry.rs
src/mcp/: client.rs  mod.rs  server.rs  types.rs
src/observability/: mod.rs  otlp.rs
src/onboard/: wizard.rs
src/providers/: mistral_nemo.rs  mod.rs  phi4.rs  qwen25.rs
src/runtime/: mod.rs  wasm.rs
src/security/: audit.rs
src/tools/: mod.rs
tests/: config_schema.rs
web/src/: App.tsx
web/src/hooks/: useAuth.ts  useSchema.ts
web/src/lib/: api.ts  i18n.ts  ws.ts
web/src/pages/: AgentChat.tsx  Channels.tsx  Config.tsx  Integrations.tsx  Profiles.tsx  Providers.tsx  Tools.tsx
web/src/types/: api.ts
zeroclaw/.dolt/noms/: journal.idx  manifest  vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv
(+17 files in other folders)
